--- a/Contact.html
+++ b/Contact.html
@@ -52,6 +52,7 @@
       c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
               </a>
             </div>
+		  <p class="loop-text">Contact on Github!</p>
             <form action="#" method="get" class="u-border-1 u-border-grey-30 u-expanded-width-xs u-search u-search-right u-search-1">
               <button class="u-search-button" type="submit">
                 <span class="u-search-icon u-spacing-10 u-text-grey-40">
@@ -103,6 +104,8 @@
           </div>
         </div>
       </div></header>
+	  <center><h1><font color="black" size="10xp"><p class="loop-text"><b>Contact on Github! </b></p></font></h1></center>
+      <center><mark>Contact, If you found something silly, wanted to give Suggestions/ and so on.(No, Spamming allowed)!</mark></center>
     <section class="u-clearfix u-section-1" id="sec-f847">
       <div class="u-clearfix u-sheet u-sheet-1"></div>
     </section>
