--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="u-container-style u-image u-image-round u-list-item u-radius-25 u-repeater-item u-shading u-image-3" data-image-width="740" data-image-height="1076" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
               <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
                 <div class="u-border-3 u-border-white u-line u-line-horizontal u-opacity u-opacity-45 u-line-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500"></div>
-                <h3 class="u-text u-text-default u-text-7" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><font color="white"><b>Live Weather Repoting.</b></font></h3>
+                <h3 class="u-text u-text-default u-text-7" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><font color="white"><b>Live Weather Reporting.</b></font></h3>
                 <p class="u-text u-text-default u-text-8"><font color="white"><b>It reports current Weather Condition, based on location.</b></font></p>
               </div>
             </div>
